Fix comment overflow

--- a/src/ui/components/Comments/Comments.css
+++ b/src/ui/components/Comments/Comments.css
@@ -27,7 +27,6 @@
   position: absolute;
   background: white;
   bottom: 1rem;
-  width: 280px;
   border: 1px solid #ccc;
   box-shadow: 0px 3px 4px #eaeaea;
   border-radius: 3px;
